data/derived/comb/progs/unify/prog2476.ml.out
Characters 17-18:
  let _ = sumList [1; 2; 3; 4];;
                   ^
Error: This expression has type int but an expression was expected of type
         'a list
